lista de usaurio / filtro / eliminar ususario

--- a/src/app/feature/users/list-users/list-users.component.html
+++ b/src/app/feature/users/list-users/list-users.component.html
@@ -3,4 +3,25 @@
   ids = user-list__filter, user-list__table, user-list__table-item-[index], user-list__table-item-[index]-avatar, user-list__table-item-[index]-first_name, user-list__table-item-[index]-email, user-list__table-item-[index]-btn-delete
   Remplazar [index] por el valor ejemplo "user-list__table-item-0"
 -->
+<div>
+  <input id="user-list__filter" type="text" [(ngModel)]="searchText" placeholder="Buscar por nombre" />
+</div>
+<table id="user-list__table">
+  <thead>
+    <tr>
+      <th>Nombre</th>
+      <th>Email</th>
+      <th>Imagen</th>
+      <th>Acciones</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let user of users | filterUserByName:searchText; let i = index" id="user-list__table-item-{{i}}">
+      <td id="user-list__table-item-{{i}}-first_name">{{ user.first_name }} {{ user.last_name }}</td>
+      <td id="user-list__table-item-{{i}}-email">{{ user.email }}</td>
+      <td id="user-list__table-item-{{i}}-avatar"><img [src]="user.avatar" alt="{{ user.first_name }}" /></td>
+      <td><button id="user-list__table-item-{{i}}-btn-delete" (click)="deleteUser(user.id, user.first_name)">Eliminar</button></td>
+    </tr>
+  </tbody>
+</table>
 
