--- a/src/app/feature/login/login/login.component.html
+++ b/src/app/feature/login/login/login.component.html
@@ -3,23 +3,23 @@
   ids = login__email, login__password, login__password-error, login__email-error, login__btn-login
 -->
 <div class="login-container">
-  <h1>Login</h1>
+  <h1>Iniciar sesión</h1>
   <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
     <div>
-      <label for="login__email">Email</label>
+      <label for="login__email">E-mail</label>
       <input id="login__email" name="email" type="email" [(ngModel)]="email" #emailInput="ngModel" required />
       <div id="login__email-error" *ngIf="emailInput.invalid && (emailInput.dirty || emailInput.touched)" class="error">
-        <div *ngIf="emailInput.errors?.['required']">Email is required</div>
+        <div *ngIf="emailInput.errors?.['required']">E-mail es requerido</div>
       </div>
     </div>
     <div>
-      <label for="login__password">Password</label>
+      <label for="login__password">Contraseña</label>
       <input id="login__password" name="password" type="password" [(ngModel)]="password" #passwordInput="ngModel" required minlength="8" />
       <div id="login__password-error" *ngIf="passwordInput.invalid && (passwordInput.dirty || passwordInput.touched)" class="error">
-        <div *ngIf="passwordInput.errors?.['required']">Password is required</div>
-        <div *ngIf="passwordInput.errors?.['minlength']">The minimum of characters will be 8</div>
+        <div *ngIf="passwordInput.errors?.['required']">Contraseña requerida</div>
+        <div *ngIf="passwordInput.errors?.['minlength']">El mínimo de caracteres será 8.</div>
       </div>
     </div>
-    <button id="login__btn-login" type="submit" [disabled]="loginForm.invalid">Login</button>
+    <button id="login__btn-login" type="submit" [disabled]="loginForm.invalid">Iniciar sesión</button>
   </form>
 </div>
