--- a/src/app/feature/users/list-users/list-users.component.html
+++ b/src/app/feature/users/list-users/list-users.component.html
@@ -10,9 +10,9 @@
   <thead>
     <tr>
       <th>Nombre</th>
-      <th>Email</th>
+      <th>E-mail</th>
       <th>Imagen</th>
-      <th>Acciones</th>
+      <th>Eliminar</th>
     </tr>
   </thead>
   <tbody>
